add: changes in Metadata and view Questions.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/CompanyName.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,19 +13,16 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no"
     />
-    <meta property="og:title" content="Mantine Dashboard" />
-    <meta property="og:site_name" content="Mantine Dashboard" />
-    <meta property="og:url" content="mantine-dashboard-eight.vercel.app" />
+    <meta property="og:title" content="Grace RN" />
+    <meta property="og:site_name" content="Grace RN" />
+    <meta property="og:url" content="gracern.com" />
     <meta
       property="og:description"
-      content="A simple beautiful dashboard! This project is built using Mantine, Framer Motion, Vite, and TypeScript. It serves as a modern, responsive, and highly customizable dashboard template."
+      content="A webapp helping you to get through the Nurising Test."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/nedois/mantine-dashboard/main/screenshoots/screen-1.jpeg"
-    />
-    <title>Mantine Dashboard</title>
+    <meta property="og:image" content="/src/assets/CompanyName.png" />
+    <title>Grace RN</title>
   </head>
   <body>
     <div id="root"></div>
