basic UI improvements.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       content="A webapp helping you to get through the Nurising Test."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/CompanyName.png" />
-    
+    <meta property="og:image" content="/src/assets/logoImage.png" />
+
     <title>Grace RN</title>
   </head>
   <body>
