image shown while sharing link

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
       content="A webapp helping you to get through the Nurising Test."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/logoImage.png" />
-
-
-    
-    
+    <meta
+      property="og:image"
+      content="https://s3.ap-south-1.amazonaws.com/gracern/regular/a61d82a7-2eef-4217-b806-72b155b62028"
+    />
 
     <title>Grace RN</title>
   </head>
