--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/CompanyName.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logoImage.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +26,6 @@
       content="https://s3.ap-south-1.amazonaws.com/gracern/regular/a61d82a7-2eef-4217-b806-72b155b62028"
     />
 
-    
     <title>Grace RN</title>
   </head>
   <body>
